Grouping and and formatting based on minute
